StatTools/interface/#logBuild#
Copying tmp/slc6_amd64_gcc530/src/RecoTauTag/RecoTau/test/TestRecoTauTagCombinatoricGenerator/TestRecoTauTagCombinatoricGenerator to productstore area:
In file included from /afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/bin/MakeDataCardHThTh_2016.cc:2:0:
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/interface/DataCardCreatorHThTh_2016.h: In member function 'void DataCardCreatorHThTh_2016::makeHiggsShape(std::string, std::string, std::string)':
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/interface/DataCardCreatorHThTh_2016.h:54:77: error: 'trigSelection_' was not declared in this scope
    std::string fullselection = "("+preselection+"&&"+categoryselection+"&&"+trigSelection_+"&&"+osSignalSelection_+")*"+weight_;
                                                                             ^
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/interface/DataCardCreatorHThTh_2016.h:54:97: error: 'osSignalSelection_' was not declared in this scope
    std::string fullselection = "("+preselection+"&&"+categoryselection+"&&"+trigSelection_+"&&"+osSignalSelection_+")*"+weight_;
                                                                                                 ^
In file included from /afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/bin/MakeDataCardHThTh_2016.cc:2:0:
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/interface/DataCardCreatorHThTh_2016.h: In member function 'std::pair<float, float> DataCardCreatorHThTh_2016::createHistogramAndShifts(std::string, std::string, std::string, float, std::string, bool, bool)':
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/interface/DataCardCreatorHThTh_2016.h:109:66: error: 'makeTHKeys' was not declared in this scope
       yield =makeTHKeys(t,filelabel_+postfix,name,cut,scaleFactor);
                                                                  ^
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/interface/DataCardCreatorHThTh_2016.h: In member function 'std::pair<float, float> DataCardCreatorHThTh_2016::makeHistogram(TTree*, std::string, std::string, std::string, float)':
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/interface/DataCardCreatorHThTh_2016.h:122:8: error: 'binning_' was not declared in this scope
     if(binning_.size()==0)
        ^
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/bin/MakeDataCardHThTh_2016.cc: In function 'int main(int, char**)':
/afs/hep.wisc.edu/cms/ojalvo/HTT_80X/2020/CMSSW_8_0_29/src/DataCardCreator/StatTools/bin/MakeDataCardHThTh_2016.cc:34:10: error: 'class DataCardCreatorHThTh_2016' has no member named 'close'